# spread_points

./: .gitignore  lipids.ent  main.py  pyproject.toml
spread_points/: __init__.py  lipid.py  main.py  spread_points.py
