[tool.poetry]
name = "spread-points"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan@gmail.com>"]
readme = "README.md"
packages = [{include = "spread_points"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
matplotlib = "^3.8.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
